force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Object to hold integration related error logs but can be modified</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>INTLOGS-{00000}</displayFormat>
        <label>Integration Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>