force-app/main/default/objects/Integration_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>field to store error message and/or any other things as required</description>
    <inlineHelpText>field to store error message and/or any other things as required</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>