force-app/main/default/objects/Integration_Log__c/fields/Integration_Component__c.field-meta.xml
<CustomField>
    <fullName>Integration_Component__c</fullName>
    <description>integration component - for eg Service Request, Order Submit etc</description>
    <inlineHelpText>integration component - for eg Service Request, Order Submit etc</inlineHelpText>
    <label>Integration Component</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>