force-app/main/default/objects/Integration_Log__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>Integration from and To</description>
    <inlineHelpText>Integration from and To</inlineHelpText>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFDC_To_TIBCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>