force-app/main/default/objects/Integration_Log__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>additional notes if required</description>
    <inlineHelpText>additional notes if required</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>