force-app/main/default/objects/Integration_Log__c/fields/Object_Details__c.field-meta.xml
<CustomField>
    <fullName>Object_Details__c</fullName>
    <description>stores the objects whose data is involved</description>
    <inlineHelpText>stores the objects whose data is involved</inlineHelpText>
    <label>Object Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>