force-app/main/default/objects/Integration_Log__c/fields/Request_Response_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Response_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Request Response Details</description>
    <inlineHelpText>Request Response Details</inlineHelpText>
    <label>Request Response Details</label>
    <referenceTo>EC_WebServiceCalloutsLog__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>