force-app/main/default/objects/Integration_Log__c/fields/Retry_Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>Retry_Batch_Class__c</fullName>
    <description>Retry Batch Class</description>
    <inlineHelpText>Retry Batch Class</inlineHelpText>
    <label>Retry Batch Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>