force-app/main/default/objects/Integration_Log__c/fields/Retry_Counter__c.field-meta.xml
<CustomField>
    <fullName>Retry_Counter__c</fullName>
    <description>Retry Counter</description>
    <inlineHelpText>Retry Counter</inlineHelpText>
    <label>Retry Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>