force-app/main/default/objects/Integration_Log__c/fields/Retry_Next__c.field-meta.xml
<CustomField>
    <fullName>Retry_Next__c</fullName>
    <description>Retry Next</description>
    <inlineHelpText>Retry Next</inlineHelpText>
    <label>Retry Next</label>
    <length>50</length>
    <type>Text</type>
</CustomField>