force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the integration call</description>
    <inlineHelpText>Status of the integration call</inlineHelpText>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>