force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Identifier__c</columns>
    <columns>Integration_Component__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Request_Response_Details__c</columns>
    <columns>Retry_Counter__c</columns>
    <columns>Retry_Batch_Class__c</columns>
    <columns>Retry_Next__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>